Add services and news

--- a/app/views/static_pages/_footer.html.erb
+++ b/app/views/static_pages/_footer.html.erb
@@ -1,3 +1,12 @@
+<!-- Обратиться к нам -->
+<div id="content-below" class="wrapper">
+  <div class="container">
+    <div class="row-fluid">
+      <div class="upsell"> <small class="muted">Доставка 300 рублей <span class="spacer">//</span> Гарантия качества <span class="spacer">//</span> 24/7 поддержка <span class="spacer">//</span> Доступные цены <span class="spacer">//</span> </small> <a href="pricing.html" class="btn btn-primary">Обратись к нам сейчас! <i class="icon-arrow-right"></i></a> </div>
+    </div>
+  </div>
+</div>
+
 <!-- FOOTER -->
 <footer id="footer">
   <div class="container">
