--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -1,2 +1,119 @@
-<h1>StaticPages#services</h1>
-<p>Find me in app/views/static_pages/services.html.erb</p>
+<div id="content">
+  <div class="container">
+    <div class="block"> 
+      
+      <!--Default Pricing Table-->
+      <h2 class="title-divider"><span>Услуги <span class="de-em">и Цены</span></span> <small>Все виды услуг, которые мы предоставляем.</small></h2>
+      
+      <!--Stack 1-->
+    <%= render "/shared/services" %>
+
+       <!--Stack 2-->   
+      <div class="row pricing-stack bordered-top-large">
+	    <div class="span3">
+	      <div class="well active">
+	        <h3 class="title"><span class="em">Очистка</span> <span class="fancy">Охлаждения</span></h3>
+	        <p class="price"><span class="digits">10 000</span> <span class="currency">руб.</span> </p>
+	        <ul class="unstyled points">
+	          <li>Диагностика</li>
+	          <li>Разборка</li>
+	          <li>Очистка</li>
+	          <li>Сборка</li>
+	        </ul>
+	        <a class="btn btn-primary">Заказать</a> </div>
+	    </div>
+	    <div class="span3">
+	      <div class="well active">
+	        <h3 class="title"><span class="em">Диагностика</span> <span class="fancy">Неисправностей</span></h3>
+	        <p class="price"><span class="digits">5 000</span> <span class="currency">руб.</span></p>
+	        <ul class="unstyled points">
+	          <li>Посмотрим</li>
+	          <li>Включим</li>
+	          <li>Выпьем чай</li>
+	          <li>Выключим</li>
+	        </ul>
+	        <a class="btn btn-primary">Заказать</a> </div>
+	    </div>
+	    <div class="span3">
+	      <div class="well active">
+	        <h3 class="title"><span class="em">Очистка</span> <span class="fancy">Охлаждения</span></h3>
+	        <p class="price"><span class="digits">10 000</span> <span class="currency">руб.</span> </p>
+	        <ul class="unstyled points">
+	          <li>Диагностика</li>
+	          <li>Разборка</li>
+	          <li>Очистка</li>
+	          <li>Сборка</li>
+	        </ul>
+	        <a class="btn btn-primary">Заказать</a> </div>
+	    </div>
+	    <div class="span3">
+	      <div class="well active">
+	        <h3 class="title"><span class="em">Диагностика</span> <span class="fancy">Неисправностей</span></h3>
+	        <p class="price"><span class="digits">5 000</span> <span class="currency">руб.</span></p>
+	        <ul class="unstyled points">
+	          <li>Посмотрим</li>
+	          <li>Включим</li>
+	          <li>Выпьем чай</li>
+	          <li>Выключим</li>
+	        </ul>
+	        <a class="btn btn-primary">Заказать</a> </div>
+	    </div>
+      </div>
+
+       <!--Stack 3-->   
+      <div class="row pricing-stack bordered-top-large">
+	    <div class="span3">
+	      <div class="well active">
+	        <h3 class="title"><span class="em">Очистка</span> <span class="fancy">Охлаждения</span></h3>
+	        <p class="price"><span class="digits">10 000</span> <span class="currency">руб.</span> </p>
+	        <ul class="unstyled points">
+	          <li>Диагностика</li>
+	          <li>Разборка</li>
+	          <li>Очистка</li>
+	          <li>Сборка</li>
+	        </ul>
+	        <a class="btn btn-primary">Заказать</a> </div>
+	    </div>
+	    <div class="span3">
+	      <div class="well active">
+	        <h3 class="title"><span class="em">Диагностика</span> <span class="fancy">Неисправностей</span></h3>
+	        <p class="price"><span class="digits">5 000</span> <span class="currency">руб.</span></p>
+	        <ul class="unstyled points">
+	          <li>Посмотрим</li>
+	          <li>Включим</li>
+	          <li>Выпьем чай</li>
+	          <li>Выключим</li>
+	        </ul>
+	        <a class="btn btn-primary">Заказать</a> </div>
+	    </div>
+	    <div class="span3">
+	      <div class="well active">
+	        <h3 class="title"><span class="em">Очистка</span> <span class="fancy">Охлаждения</span></h3>
+	        <p class="price"><span class="digits">10 000</span> <span class="currency">руб.</span> </p>
+	        <ul class="unstyled points">
+	          <li>Диагностика</li>
+	          <li>Разборка</li>
+	          <li>Очистка</li>
+	          <li>Сборка</li>
+	        </ul>
+	        <a class="btn btn-primary">Заказать</a> </div>
+	    </div>
+	    <div class="span3">
+	      <div class="well active">
+	        <h3 class="title"><span class="em">Диагностика</span> <span class="fancy">Неисправностей</span></h3>
+	        <p class="price"><span class="digits">5 000</span> <span class="currency">руб.</span></p>
+	        <ul class="unstyled points">
+	          <li>Посмотрим</li>
+	          <li>Включим</li>
+	          <li>Выпьем чай</li>
+	          <li>Выключим</li>
+	        </ul>
+	        <a class="btn btn-primary">Заказать</a> </div>
+	    </div>
+      </div>
+
+      <%= render "/shared/include" %>
+
+    </div>
+  </div>
+</div>
