--- a/app/assets/stylesheets/theme-style.css
+++ b/app/assets/stylesheets/theme-style.css
@@ -209,7 +209,7 @@ a:focus {
   border-radius: 3px;
   border: 0;
   border-bottom: 3px solid #55a79a;
-  background-image: url(../img/bg_noise-2.png);
+  background-image: url(/img/bg_noise-2.png);
   background-position: left top;
   background-repeat: repeat;
   -webkit-box-shadow: 1px 1px 10px rgba(36, 36, 36, 0.6);
@@ -848,7 +848,7 @@ a:focus {
   color: #242424;
 }
 #highlighted .inner {
-  background: url(../img/bg_diamond.png) left bottom repeat-x;
+  background: url(/img/bg_diamond.png) left bottom repeat-x;
 }
 #highlighted ul.nav-pills {
   margin: 0;
@@ -1733,7 +1733,7 @@ blockquote small img {
 .title-divider {
   text-align: left;
   margin-bottom: 1em;
-  background: #ffffff url(../img/bg_divider.png) left center repeat-x;
+  background: #ffffff url(/img/bg_divider.png) left center repeat-x;
   padding: 0;
 }
 .title-divider span {
