Practicaly finish design

--- a/app/views/shared/_rightmenu.erb
+++ b/app/views/shared/_rightmenu.erb
@@ -1,27 +1,34 @@
   <div class="span3 sidebar sidebar-right">
     <div class="inner">
       <div class="block">
+        <h4 class="title-divider"><span>Адрес</span></h4>
+        <ul class="unstyled margin-bottom-20">
+          <li><i class="icon-home"></i> 603000, г. Нижний Новгород, ул. Бекетова, 15, оф. 4</li>
+          <li><i class="icon-envelope-alt"></i> infocom-nn@yandex.ru</li>
+          <li><h3>Тел.: 414-89-19<h3></li>
+          <li><a href="http://www.infocomnn.ru"><i class="icon-globe"></i> http://www.infocomnn.ru</a></li>
+        </ul>
+      </div>
+      <div class="block">        
         <div class="input-append">
-          <input class="span2" id="appendedInputButton" type="text" placeholder="Search" />
-          <button class="btn" type="button">Go!</button>
+          <input class="span2" id="appendedInputButton" type="text" placeholder="Поиск" />
+          <button class="btn" type="button">Искать</button>
         </div>
       </div>
       <div class="block">
-        <h4 class="title-divider"><span>Tags</span></h4>
-        <div class="tag-cloud"> <span><a href="#">culture</a> (97)</span> <span><a href="#">general</a> (77)</span> <span><a href="#">coding</a> (75)</span> <span><a href="#">design</a> (56)</span> <span><a href="#">weather</a> (65)</span> <span><a href="#">jobs</a> (70)</span> <span><a href="#">health</a> (54)</span> </div>
+        <h4 class="title-divider"><span>Услуги</span></h4>
+        <div class="tag-cloud"> <span><a href="#">матрица</a></span> <span><a href="#">Windows</a></span> <span><a href="#">мышь</a></span> <span><a href="#">клавиатура</a></span> <span><a href="#">охлаждение</a></span> <span><a href="#">ОЗУ</a></span> <span><a href="#">винчестер</a></span> </div>
       </div>
+
       <div class="block">
-        <h4 class="title-divider"><span>Archive</span></h4>
-        <ul class="big-list tags">
-          <li><a href="#">January 2013</a> (19)</li>
-          <li><a href="#">December 2012</a> (0)</li>
-          <li><a href="#">November 2012</a> (39)</li>
-          <li><a href="#">October 2012</a> (20)</li>
-          <li><a href="#">September 2012</a> (56)</li>
-          <li><a href="#">August 2012</a> (49)</li>
-          <li><a href="#">July 2012</a> (90)</li>
+        <h4 class="title-divider"><span>Время работы</span></h4>
+        <ul class="unstyled">
+          <li><strong>Пн. - Пт.:</strong> с 10:00 до 20:00 </li>
+          <li><strong>Суббота:</strong> с 11:00 до 17:00 </li>
+          <li><strong>Воскресенье:</strong> Выходной</li>
         </ul>
       </div>
-      <div class="block"> <a href="#" class="btn btn-warning"><i class="icon-rss"></i> Subscribe via RSS feed</a> </div>
+
+      <div class="block"> <a href="#" class="btn btn-warning"><i class="icon-rss"></i> RSS-канал</a> </div>
     </div>
   </div>
