--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -27,7 +27,7 @@
                 <li><i class="icon-calendar"></i> <span class="visible-desktop">Created:</span> Sun 20th Jan 2013</li>
                 <li><i class="icon-user"></i> <a href="#">Alex</a></li>
               </ul>
-              <a href="blog-post.html" class="media-object"> <img src="img/blog/ape.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
+              <a href="blog-post.html" class="media-object"> <img src="/blog/ape.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis. Morbi tincidunt posuere turpis eu laoreet. Nulla facilisi. Aenean at massa leo. Vestibulum in varius arcu.</p>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis</p>
               <ul class="inline links">
@@ -56,7 +56,7 @@
                 <li><i class="icon-calendar"></i> <span class="visible-desktop">Created:</span> Thu 10th Jan 2013</li>
                 <li><i class="icon-user"></i> <a href="#">Dave</a></li>
               </ul>
-              <a href="blog-post.html" class="media-object"> <img src="img/blog/fly.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
+              <a href="blog-post.html" class="media-object"> <img src="/blog/fly.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis. Morbi tincidunt posuere turpis eu laoreet. Nulla facilisi. Aenean at massa leo. Vestibulum in varius arcu.</p>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis</p>
               <ul class="inline links">
@@ -85,7 +85,7 @@
                 <li><i class="icon-calendar"></i> <span class="visible-desktop">Created:</span> Wed 9th Jan 2013</li>
                 <li><i class="icon-user"></i> <a href="#">Tom</a></li>
               </ul>
-              <a href="blog-post.html" class="media-object"> <img src="img/blog/frog.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
+              <a href="blog-post.html" class="media-object"> <img src="/blog/frog.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis. Morbi tincidunt posuere turpis eu laoreet. Nulla facilisi. Aenean at massa leo. Vestibulum in varius arcu.</p>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis</p>
               <ul class="inline links">
@@ -114,7 +114,7 @@
                 <li><i class="icon-calendar"></i> <span class="visible-desktop">Created:</span> Mon 7th Jan 2013</li>
                 <li><i class="icon-user"></i> <a href="#">Tom</a></li>
               </ul>
-              <a href="blog-post.html" class="media-object"> <img src="img/blog/ladybird.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
+              <a href="blog-post.html" class="media-object"> <img src="/blog/ladybird.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis. Morbi tincidunt posuere turpis eu laoreet. Nulla facilisi. Aenean at massa leo. Vestibulum in varius arcu.</p>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis</p>
               <ul class="inline links">
@@ -143,7 +143,7 @@
                 <li><i class="icon-calendar"></i> <span class="visible-desktop">Created:</span> Thu 3rd Jan 2013</li>
                 <li><i class="icon-user"></i> <a href="#">Alex</a></li>
               </ul>
-              <a href="blog-post.html" class="media-object"> <img src="img/blog/water-pump.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
+              <a href="blog-post.html" class="media-object"> <img src="/blog/water-pump.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis. Morbi tincidunt posuere turpis eu laoreet. Nulla facilisi. Aenean at massa leo. Vestibulum in varius arcu.</p>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis</p>
               <ul class="inline links">
@@ -172,7 +172,7 @@
                 <li><i class="icon-calendar"></i> <span class="visible-desktop">Created:</span> Thu 27th Dec 2012</li>
                 <li><i class="icon-user"></i> <a href="#">Erin</a></li>
               </ul>
-              <a href="blog-post.html" class="media-object"> <img src="img/blog/butterfly.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
+              <a href="blog-post.html" class="media-object"> <img src="/blog/butterfly.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis. Morbi tincidunt posuere turpis eu laoreet. Nulla facilisi. Aenean at massa leo. Vestibulum in varius arcu.</p>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis</p>
               <ul class="inline links">
@@ -201,7 +201,7 @@
                 <li><i class="icon-calendar"></i> <span class="visible-desktop">Created:</span> Wed 26th Dec 2012</li>
                 <li><i class="icon-user"></i> <a href="#">Dave</a></li>
               </ul>
-              <a href="blog-post.html" class="media-object"> <img src="img/blog/ape.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
+              <a href="blog-post.html" class="media-object"> <img src="/blog/ape.jpg" alt="Picture of frog by Ben Fredericson" /> </a>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis. Morbi tincidunt posuere turpis eu laoreet. Nulla facilisi. Aenean at massa leo. Vestibulum in varius arcu.</p>
               <p>Nam risus magna, fringilla sit amet blandit viverra, dignissim eget est. Ut <strong>commodo ullamcorper risus nec</strong> mattis</p>
               <ul class="inline links">
@@ -211,7 +211,6 @@
             </div>
           </div>
         </div>
-        <small>Blog photos by <a href="http://www.flickr.com/photos/xjrlokix/">Ben Fredericson</a></small>
         <div class="pagination pagination-centered">
           <button type="button" class="btn btn-block" data-loading-text="Loading...">Load More</button>
         </div>
