--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -3,7 +3,7 @@
     <div class="block"> 
       
       <!--Default Pricing Table-->
-      <h2 class="title-divider"><span>Услуги <span class="de-em">и Цены</span></span> <small>Все виды услуг, которые мы предоставляем.</small></h2>
+      <h2 class="title-divider"><span>Услуги <span class="de-em">и Цены</span></span> <small>Все виды услуг, которые мы предоставляем</small></h2>
       
       <!--Stack 1-->
     <%= render "/shared/services" %>
@@ -113,6 +113,47 @@
       </div>
 
       <%= render "/shared/include" %>
+
+<!-- Прочие услуги-->
+       <h2 class="title-divider"><span>Прочие <span class="de-em">Услуги</span></span> <small>Услуги, которые мы оказываем</small></h2>
+        <div class="tabbable tabs-left">
+          <ul id="myTab2" class="nav nav-tabs">
+            <li class="active"><a href="#vtab1" data-toggle="tab">Установка Windows</a></li>
+            <li><a href="#vtab2" data-toggle="tab">Установка Office</a></li>
+            <li><a href="#vtab3" data-toggle="tab">Настройка Wi-Fi</a></li>
+            <li><a href="#vtab4" data-toggle="tab">Установка прочих программ</a></li>
+            <li><a href="#vtab5" data-toggle="tab">Удаление вирусов</a></li>
+            <li><a href="#vtab6" data-toggle="tab">Дефрагментация диска</a></li>
+          </ul>
+          <div id="myTab2Content" class="tab-content">
+            <div class="tab-pane fade in active" id="vtab1">
+            	<h4>Установка Windows</h4>
+              <p>Dignissim tincidunt mattis lorem, sagittis nisi, amet ut pulvinar lectus cursus ac! Enim turpis odio dis. Non ut vel, nisi dapibus? Velit augue tortor, ut ac ac nec tortor nec, mauris massa.</p>
+              <button type="button" class="btn btn-large btn-primary">1 200 руб.</button>
+            </div>
+            <div class="tab-pane fade" id="vtab2">
+            	<h4>Дефрагментация диска</h4>
+              <p>Aliquet risus, penatibus, ac integer ultricies ultricies elementum augue proin habitasse placerat. Nunc habitasse duis, elementum, porttitor porta? Purus, ac odio. Habitasse, egestas vut.</p>
+            </div>
+            <div class="tab-pane fade" id="vtab3">
+            	<h4>Дефрагментация диска</h4>
+              <p>Мы очень круто настраиваем Wi-Fi. Он получается очень наваристым, с золотистой корочкой.</p>
+            </div>
+            <div class="tab-pane fade" id="vtab4">
+            	<h4>Дефрагментация диска</h4>
+              <p>Мы очень круто настраиваем Wi-Fi. Он получается очень наваристым, с золотистой корочкой.</p>
+            </div>
+            <div class="tab-pane fade" id="vtab5">
+            	<h4>Дефрагментация диска</h4>
+              <p>Мы очень круто настраиваем Wi-Fi. Он получается очень наваристым, с золотистой корочкой.</p>
+            </div>
+            <div class="tab-pane fade" id="vtab6">
+            	<h4>Дефрагментация диска</h4>
+              <p>Мы очень круто настраиваем Wi-Fi. Он получается очень наваристым, с золотистой корочкой.</p>
+              <button type="button" class="btn btn-large btn-primary">50 000 руб.</button>
+            </div>
+          </div>
+        </div>
 
     </div>
   </div>
