--- a/app/views/static_pages/_header.html.erb
+++ b/app/views/static_pages/_header.html.erb
@@ -33,7 +33,7 @@
         
         <!--user menu-->
         <ul class="nav user-menu pull-right">
-          <li><a href="signup.html" class="btn btn-primary signup">Зарегистрироваться</a></li>
+          <li><a href="#" class="btn btn-primary signup">Зарегистрироваться</a></li>
           <li class="dropdown"> <a href="login.html" class="btn btn-primary dropdown-toggle login" id="login-drop" data-toggle="dropdown">Логин</a>
             <div class="dropdown-menu" role="menu" aria-labelledby="login-drop">
               <form action="login.html" class="form-inline" id="login-form-drop" role="menuitem" />
@@ -52,11 +52,11 @@
           
           <!--main navigation-->
           <ul class="nav" id="main-menu">
-            <li class="home-link"><a href="index.html"><i class="icon-home hidden-phone"></i><span class="visible-phone">Главная</span></a></li>
-            <li class="<%=is_active('about')%>"><a href="about.html" class="menu-item">О нас</a></li>
-            <li class="<%=is_active('services')%>"><a href="services.html" class="menu-item">Услуги и цены</a></li>
-            <li class="<%=is_active('news')%>"><a href="news.html" class="menu-item">Новости</a></li>
-            <li class="<%=is_active('contact')%>"><a href="contact.html" class="menu-item">Контакты</a></li>
+            <li class="home-link"><a href="/index.html"><i class="icon-home hidden-phone"></i><span class="visible-phone">Главная</span></a></li>
+            <li class="<%=is_active('about')%>"><a href="/about.html" class="menu-item">О нас</a></li>
+            <li class="<%=is_active('services')%>"><a href="/services.html" class="menu-item">Услуги и цены</a></li>
+            <li class="<%=is_active('news')%>"><a href="/news.html" class="menu-item">Новости</a></li>
+            <li class="<%=is_active('contact')%>"><a href="/contact.html" class="menu-item">Контакты</a></li>
           </ul>
         </div>
         <!--/.nav-collapse --> 
